--- a/test.css
+++ b/test.css
@@ -1,875 +1,57 @@
-/* imports */
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:600&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Tomorrow&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Abel&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-/*
-:root {
-    color-scheme: light dark;
-}
-*/
-
-html {
-    height: 100%;
-    color-scheme: light dark;
-}
-
-.notice {
-  font-family: "Roboto";
-  font-size: 1.5vw;
-}
-
-hr {
-    mix-blend-mode: difference;
-}
-
-.eventDate {
-    font-family: 'Roboto';
-    color: #7d7d7d;
-}
-
-body {
-  text-align: center;
-  /* General */
-  width: device-width;
+html, body {
   margin: 0;
-
+  background-color: #121212;
 }
-
-.github-img {
-    width: 10%;
-    height: auto;
-}
-
-.facebook-img {
-    width: 10%;
-    height: auto;
-}
-
-.instagram-img {
-    width: 10%;
-    height: auto;
-}
-
-.twitter-img {
-    width: 10%;
-    height: auto;
-}
-
-img:hover{
-    /* filter: brightness(60%); */
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-h5 {
-    margin-top: 0;
-}
-
-.gray {
-    color: gray;
-}
-
-.myTeamSubmit {
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  padding-top: 0.5vh;
-  padding-bottom: 0.5vh;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vh;
-  font-family: 'Roboto';
-}
-.myTeamButton {
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-   padding-top: 0.5vh;
-  padding-bottom: 0.5vh;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vh;
-  font-family: 'Roboto';
-  border: 2px solid darkgray;
-  margin-bottom: 2%;
-  width: 75vw;
-}
-
-tr {
-  font-family: 'Work Sans', sans-serif;
-  margin-left: 3vw;
-  margin-right: 3vw;
-  margin-bottom: 5vh;
-  list-style-type: none;
-}
-
-.numLabel {
-  font-family: 'Roboto';
-  font-size: 3vh;
-    margin-bottom: 0;
-
-
-}
-
-.grayBack {
-    background-color: #d4d4d4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.eventInfoDiv {
-    background-color: #d4d4d4;
-    width: 100vw;
-    display: inline-grid;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.submit-form {
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  padding-top: 0.5vh;
-  padding-bottom: 0.5vh;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vh;
-  font-family: 'Roboto';
-  transition-duration: 0.4s;
-  border: 2px solid darkgray;
-  /* width: 75vw; */
-  margin-bottom: 2%;
-}
-
-
-
-.makeEpicAppear {
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  padding-top: 0.5vh;
-  padding-bottom: 0.5vh;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vh;
-  font-family: 'Roboto';
-  border: 3px solid #eb8034;
-  /* width: 75vw; */
-  transition-duration: 0.4s;
-
-}
-
-/*
-.makeEpicAppear:hover{
-    background-color: blue;
-}
-*/
-
-.numHeading {
-    font-family: 'Roboto';
-    font-size: 3vh;
-}
-
-.logoPic {
-    width: 10vw;
-    height: auto;
-}
-
-.loadingAnime {
-  margin-top: 40vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  overflow: hidden;
-}
-
-
-
-
-
-
-.logoPic {
-  /* visibility: hidden; */
-
-  /* width: 10vw;
-  height: auto; */
-  /* position: absolute; */
-  /* top: 30%; */
-  /* left: 50%; */
-  /* margin-left: -4.7vw; */
-}
-
-body, html {
-    height: 100%;
-}
-
-.everything {
-    visibility: hidden;
-    height:0;
-    /* display: none; */
-}
-/* Everything Forms */
-form {
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-}
-
-/* html, body {margin: 0; height: 100%; overflow: hidden} */
-
-
-.myTeamInput {
-  width: 75%;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  background-color: white;
-  /* background-image: url('searchicon.png'); */
-  /* background-position: 10px 10px; */
-  /* background-repeat: no-repeat; */
-  padding: 12px 20px 12px 5px;
-  height: 3vh;
-  transition-duration: 0.4s;
-
-}
-
-
-.myTeamInput {
-  transition: width 0.4s ease-in-out;
-}
-
-.myTeamInput:focus {
-  width: 100%;
-}
-
-/* .teamNumForm {
-    width:75%;
-} */
-
-/*
-select {
-  background-color: #f5f2d0;
-  width: 50vw;
-  font-family: 'Robot';
-  font-size: 2.5vh;
-}
-*/
-option {
-  font-family: 'Abel', sans-serif;
-  font-size: 3vh;
-}
-
-img {
-  height: 17vw;
-  /* float: center; */
-}
-
-/* CLASSES */
-
-/* Header Classes */
-
 
 .header {
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.4);
-  height: 100%;
-  /* margin-top: 40vh; */
-}
-
-.header a {
-  text-align: center;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  /* margin-top: 40vh; */
-}
-
-.header2 {
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.4);
-  height: 17vh;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.logo {
-  /* margin-top: 4vh; */
-  display: inline-block;
-  /* size: 50%; */
-  height: 17vw;
-  width: auto;
-}
-
-.rotate {
-  /* animation: rotation 1s linear; */
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-
-}
-
-.marginTime {
-  display: inline-block;
-  size: 50%;
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: 40vh;
-}
-/* .original-option {
-  font-size: 1.75vw;
-} */
-
-.sortable {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 85%;
-  margin-bottom: 4vh;
-}
-
-.sortable td, .sortable th {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-a.normal {
-  text-decoration: none;
-  color: black;
-}
-
-table.sortable thead {
-    background-color:#eee;
-    color:#666666;
-    font-weight: bold;
-    cursor: default;
-
-}
-
-.sortable {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 85%;
-  margin-bottom: 4vh;
-}
-
-.sortable tr:nth-child(odd){background-color: rgba(0, 0, 0, 0.2);}
-
-.sortable tr:hover {background-color: #ddd;}
-
-.sortable th:hover {background-color: #ddd;}
-
-.sortable th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color:#eee;
-  color:#666666;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: center;
-  }
-
-}
-
-/* More Classes */
-.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after {
-    content: " \25B4\25BE"
-}
-
-.table-container {
-    margin-right: auto;
-    margin-left: auto;
-    float: center;
-}
-
-
-
-.massive {
-  font-size: 20vw;
-  font-family: 'Tomorrow', sans-serif;
-}
-
-button {
-  transition: all 0.4s;
-  cursor: pointer;
-
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vw;
-  font-family: 'Roboto Mono', monospace;
-}
-
-
-
-button span {
-  display: inline-block;
-  position: relative;
-  transition: 0.4s;
-}
-
-button span:after {
-  content: '\00bb';
-  /* background-color: black; */
-  position: absolute;
-  opacity: 0;
-  right: -20px;
-  transition: 0.4s;
-
-}
-
-button:hover span {
-  padding-right: 25px;
-  color: white;
-  /* background-color: #3e8e41 */
-  /* margin-right: 25px; */
-}
-
-button:hover {
+  display:flex;
+  width:100%;
   background-color: black;
-    color: white;
 }
 
-button:hover span:after {
-  opacity: 1;
-  right: 0;
-  /* background-color: #3e8e41 */
+.headerSpace {
+  flex-grow:3;
 }
 
-.websiteButton {
-  margin-top: 5vw;
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  padding: 3vw 7vw;
+.sButtons {
+  float:right;
+  flex-grow:1;
+}
+
+.titleText {
+  flex-grow:1;
+  color:white !important;
+}
+
+.foo-button {
+  float:right;
+}
+
+.mdc-button__label {
+  color: white;
+}
+
+.si {
+  color: green !important;
+}
+
+.title {
+  width: 100%;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vw;
-  margin-bottom: 10vw;
-  font-family: 'Roboto Mono', monospace;
-}
-
-
-
-.nameHeading {
-  width: device-width;
-  font-size: 15vw;
+  font-size: 13vw;
   font-family: 'Tomorrow', sans-serif;
-
-}
-
-.blank_space {
-  margin-top: 10px;
-}
-
-.yearsParticipated {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    font-size: 3vw;
-}
-
-.location {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    font-size: 2.5vw;
-    margin-top: 3vh;
-    color: rgb(20, 20, 20);
-}
-
-.teamCountry {
-    font-family: 'Lato', sans-serif;
-    font-size: 2vw;
-    margin-bottom: 3vh;
-    margin-top: 1.5vh;
-    color: rgb(66, 66, 66);
-}
-.rightSize {
-    width : device-width;
-    overflow-x: hidden;
-}
-.title-heading {
-    position: absolute;
-    text-align: center;
-    font-family: 'Roboto Mono', monospace;
-    width: device-width;
-}
-
-.inline-centering {
-    margin-top: 30px;
-    text-align: center !important;
-}
-
-.rankAlign {
-  text-align: right !important;
-}
-
-.inline-collapsable {
-    margin-top: 30px;
-    display:none;
-}
-
-.benis {
-
-}
-.horizontal-scroll-except-first-column {
-  width: 100%;
-  overflow: auto;
-}
-
-.horizontal-scroll-except-first-column > table {
-  margin-left: 8em;
-}
-
-.horizontal-scroll-except-first-column > table > * > tr > th:first-child,
-.horizontal-scroll-except-first-column > table > * > tr > td:first-child {
-  position: absolute;
-  width: 8em;
-  margin-left: -8em;
-  background: #ccc;
-}
-
-.horizontal-scroll-except-first-column > table > * > tr > th,
-.horizontal-scroll-except-first-column > table > * > tr > td {
-  /* Without this, if a cell wraps onto two lines, the first column
-   * will look bad, and may need padding. */
-  white-space: nowrap;
-}
-
-.thead {
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(0, 0, 0, 0.75);
-}
-
-.server-status {
-    width: 50%;
-    display: inline-block;
-}
-
-.event-name {
-  font-family: 'Roboto';
-}
-
-.loading-div {
-  display: inline-block;
-  text-align: center;
-  height: 62.3px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 100px;
-}
-.loading {
-  display: block;
-  margin:0 auto;
-  margin-bottom: 3vw;
-  /* visibility: hidden; */
-
-}
-.center-header {
-  /* margin-left: 50vw; */
-  /* width: device-width; */
-}
-
-/* More Animation Stuff */
-
-
-@keyframes buttonHover {
-    0%{background-color: white}
-    100%{background-color: #8248a3}
-}
-
-.myTeamSubmit {
-  background-color: white;  /*Green */
-  border: none;
-  color: black;
-  padding-top: 0.5vh;
-  padding-bottom: 0.5vh;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 2vh;
-  font-family: 'Roboto';
-  border: 2px solid darkgray;
-  transition-duration: 0.4s;
-  width: 25vw;
-  margin-top: 5px;
-
-}
-
-.myTeamSubmit:hover {
-    background-color: black;
-    color: white;
-}
-
-.submit-form:hover {
-    background-color: black;
-    color: white;
+  color: white;
 }
 
 
-
-
-
-
-
-select {
-    width: 75vw;
+.undl {
+  animation: blinker .4s linear infinite;
 }
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #121212;
-        /* background-color: #2e2e2e; */
-        /* background-color: #171717; */
-    }
-    td {
-        color: white;
-    }
-    h3, label, h4 {
-        color:white;
-    }
-    .massive {
-        color: white;
-    }
-    .sortable tr:hover {background-color: darkgray;}
-
-    .sortable th:hover {background-color: darkgray;}
-
-    .numHeading {
-        color: white;
-    }
-/*
-    a:visited {
-        color: #8248a3;
-    }
-*/
-    .submit-form:hover {
-    background-color: #884bab;
-    color: white;
-}
-    .myTeamSubmit:hover {
-    background-color: #884bab;
-}
-
-    a {
-        color: #884bab;
-    }
-
-    .select2-selection select2-selection--single{
-        color: white;
-        background-color: black;
-    }
-    .select2-selection__rendered {
-        background-color: black;
-        color: white;
-    }
-    .select2-results {
-        background-color: black;
-        color: white;
-    }
-    /* button:hover {
-        background-color:#3641ff;
-        color:white;
-    } */
-
-    .nameHeading {
-        color: white;
-    }
-    .yearsParticipated {
-        color: white;
-    }
-    .location {
-        color: #7d7d7d;
-    }
-    h1 {
-        color: white;
-    }
-    /* span {
-        background-color: black;
-    } */
-    form {
-        border: white;
-    }
-    .select2-selection__rendered {
-        background-color: white;
-    }
-    .submit-form {
-        border-width: 2px;
-        border-color: white;
-    }
-    .submit-form:hover {
-        animation: buttonHover 0.5s ease;
-        animation-fill-mode: forwards;
-    }
-
-    @keyframes buttonHover {
-        0%{background-color: white; }
-        100%{background-color: #8a50b3;}
-    }
-
-    button span:after {
-    /* background-color: #884bab; */
-}
-    button:hover {
-        background-color: #884bab;
-        color: white;
-}
-
-.sortable tr:nth-child(odd){background-color: rgba(255, 255, 255, 0.1);}
-
-.sortable tr:hover {background-color: rgb(100, 100, 100);}
-
-.sortable th:hover {background-color: rgb(177, 177, 177);}
-
-    .grayBack {
-        background-color: #212121;
-    }
-    .eventInfoDiv {
-        background-color: #212121;
-    }
-
-    .makeEpicAppear:hover {
-        background-color: #eb8034;
-    }
-
-    .myTeamInput{
-      color: black;
-    }
-}
-
-
-.sk-folding-cube {
-  margin: 20px auto;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  -webkit-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
-}
-
-.sk-folding-cube .sk-cube {
-  float: left;
-  width: 50%;
-  height: 50%;
-  position: relative;
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1);
-}
-.sk-folding-cube .sk-cube:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
-          animation: sk-foldCubeAngle 2.4s infinite linear both;
-  -webkit-transform-origin: 100% 100%;
-      -ms-transform-origin: 100% 100%;
-          transform-origin: 100% 100%;
-}
-.sk-folding-cube .sk-cube2 {
-  -webkit-transform: scale(1.1) rotateZ(90deg);
-          transform: scale(1.1) rotateZ(90deg);
-}
-.sk-folding-cube .sk-cube3 {
-  -webkit-transform: scale(1.1) rotateZ(180deg);
-          transform: scale(1.1) rotateZ(180deg);
-}
-.sk-folding-cube .sk-cube4 {
-  -webkit-transform: scale(1.1) rotateZ(270deg);
-          transform: scale(1.1) rotateZ(270deg);
-}
-.sk-folding-cube .sk-cube2:before {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-.sk-folding-cube .sk-cube3:before {
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-.sk-folding-cube .sk-cube4:before {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-}
-@-webkit-keyframes sk-foldCubeAngle {
-  0%, 10% {
-    -webkit-transform: perspective(140px) rotateX(-180deg);
-            transform: perspective(140px) rotateX(-180deg);
-    opacity: 0;
-  } 25%, 75% {
-    -webkit-transform: perspective(140px) rotateX(0deg);
-            transform: perspective(140px) rotateX(0deg);
-    opacity: 1;
-  } 90%, 100% {
-    -webkit-transform: perspective(140px) rotateY(180deg);
-            transform: perspective(140px) rotateY(180deg);
-    opacity: 0;
-  }
-}
-
-@keyframes sk-foldCubeAngle {
-  0%, 10% {
-    -webkit-transform: perspective(140px) rotateX(-180deg);
-            transform: perspective(140px) rotateX(-180deg);
-    opacity: 0;
-  } 25%, 75% {
-    -webkit-transform: perspective(140px) rotateX(0deg);
-            transform: perspective(140px) rotateX(0deg);
-    opacity: 1;
-  } 90%, 100% {
-    -webkit-transform: perspective(140px) rotateY(180deg);
-            transform: perspective(140px) rotateY(180deg);
+@keyframes blinker {
+  50% {
     opacity: 0;
   }
 }
