--- a/test.css
+++ b/test.css
@@ -873,3 +873,17 @@ select {
     opacity: 0;
   }
 }
+
+
+@keyframes updated {
+  0% {
+    color: white;
+  }
+  10% {
+    color: greenyellow;
+  }
+}
+
+.updated {
+  animation: ;
+}
