--- a/test.css
+++ b/test.css
@@ -190,3 +190,28 @@ canvas{
 .ohg:hover {
   color:blue !important;
 }
+
+.copyright {
+  width:100%;
+  text-align:center;
+  position:fixed;
+  bottom:0;
+    color: #586069;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    /* margin-bottom: 2px; */
+    font-size: 10px;
+}
+
+.link {
+  color: #586069 !important;
+  text-decoration: none;
+}
+
+div {
+  height:inherit;
+}
+
+h3 {
+  width:100%;
+  text-align: center;
+}
