--- a/styles/common.css
+++ b/styles/common.css
@@ -1,3 +1,5 @@
+
+/* MODAL POPUP */
 .modal {
     z-index: 9;
     position: fixed;
@@ -16,7 +18,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: rgb(31, 31, 31);
     padding: 1rem 1.5rem;
     width: 24rem;
     border-radius: 0.5rem;
@@ -38,4 +40,8 @@
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-text {
+    color: white;
+    text-align: center;
 }
