--- a/styles/common.css
+++ b/styles/common.css
@@ -45,9 +45,7 @@
     color: white;
     text-align: center;
 }
-.firebaseui-card-header, .firebaseui-card-content, .firebaseui-card-actions, ul.firebaseui-tos-list.firebaseui-tos, .firebaseui-card-footer, form   {
-    background-color: #1f1f1f;
-}
+
 h1.firebaseui-title {
     color: white;
 }
@@ -60,6 +58,10 @@ h1.firebaseui-title {
   input.mdl-textfield__input.firebaseui-input.firebaseui-id-email, input.mdl-textfield__input.firebaseui-input.firebaseui-id-email, input.mdl-textfield__input.firebaseui-input.firebaseui-id-new-password {
       color: white;
   }
-  .mdc-drawer__header, .mdc-drawer__content{
-    background-color: #1f1f1f;
+  .mdc-drawer{
+    background-color: #121212;
 }
+
+  .mdc-drawer__title {
+    color:White !important;
+  }
