--- a/styles/common.css
+++ b/styles/common.css
@@ -58,3 +58,11 @@ h1.firebaseui-title {
   input.mdl-textfield__input.firebaseui-input.firebaseui-id-email, input.mdl-textfield__input.firebaseui-input.firebaseui-id-email, input.mdl-textfield__input.firebaseui-input.firebaseui-id-new-password {
       color: white;
   }
+
+  label.mdl-textfield__label.firebaseui-label {
+    color: white;
+}
+
+form {
+    background-color: #1f1f1f;
+}
