quality of life

--- a/team.css
+++ b/team.css
@@ -23,7 +23,7 @@ body {
 .team-picture {
   margin-left: 40px;
   margin-top:20px;
-    /* border: 2px solid gray; */
+/* border: 2px solid gray; */
     background-color: white;
     height: 100px;
     width: 100px;
@@ -32,12 +32,20 @@ body {
 }
 
 .logo-icon {
-  height:60px;
+  scale: 1;
+  height:70px;
   width:auto;
-  margin:20px;
+  margin:15px;
+  border-radius: 12%;
+  -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+  
 }
 
 
 .team-picture, .gradient-wrap {
+  height: 100px;
+    /* width: auto; */
   border-radius: 25%;
+  /* backdrop-filter: blur(10px); */
 }
