--- a/test.css
+++ b/test.css
@@ -1,277 +1,120 @@
 @import url('https://fonts.googleapis.com/css?family=Tomorrow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
 
-html, body {
+
+* {
   margin: 0;
-
+  padding: 9;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr fit-content(20%);
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-areas: 
+  "title awards-years"
+  "header header"
+  "content content"
+  "sidebar sidebar"
+  "footer footer";
+}
+
+.team-logo {
+  grid-area: title;
+  justify-self: start;
+}
+.awards-years {
+  grid-area: "awards-years";
+  align-self: center;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.awards, .years {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  margin-left: 10%;
+}
 .header {
-  display:flex;
-  width:100%;
-  background-color: #121212;
+  grid-area: header;
+}
+.sidebar {
+  grid-area: sidebar;
+  border-left: black 1px solid;
+}
+.content {
+  grid-area: content;
+  align-self: start;
+  margin-top: 3%;
+}
+.footer {
+  grid-area: footer;
 }
 
 
-.headerSpace {
-  flex-grow:3;
-}
-
-.sButtons {
-  float:right;
-  flex-grow:1;
-}
-
-.titleText {
-  flex-grow:1;
-  color:white !important;
-}
-
-.foo-button {
-  float:right;
-}
-
-.mdc-button__label {
-  color: white;
-}
-
-.si {
-  color: green !important;
-}
-
-.title {
-  width: 100%;
-  text-align: center;
-  font-size: 13vw;
-  font-family: 'Tomorrow', sans-serif;
-  color: white;
-}
-
-.subtitle {
-  /* margin-top: 10px; */
-  width: 100%;
-  text-align: center;
-  font-size: 2vw;
-  font-family: 'Montserrat', sans-serif;
-  color: white;
-}
-
-@media screen and (max-width: 500px) {
-  .subtitle {
-    margin-top: 40px;
-    width: 100%;
-    text-align: center;
-    font-size: 3vw;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-  }
-  .undl {
-    display:none;
-  }
-  .title {
-    font-size: 16vw;
-    margin-top:100px;
-  }
-  .other-services-mobile {
-      display:block !important;
-  }
-  .other-services {
-      display:none;
-  }
-  .none {
-    opacity:0;
-  }
-  .vertical-space {
-    height: 30px !important;
-  }
-  .gusty {
-    margin-top: 20px;
-  }
-}
-
-.other-services-mobile {
-    display:none;
-}
-
-.undl {
-  -webkit-animation: 1s blink step-end infinite;
-  -moz-animation: 1s blink step-end infinite;
-  -ms-animation: 1s blink step-end infinite;
-  -o-animation: 1s blink step-end infinite;
-  animation: 1s blink step-end infinite;
-}
-
-@keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: white;
-  }
-}
-
-@-moz-keyframes blink {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: white;
-  }
-}
-
-@-webkit-keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: white;
-  }
-}
-
-@-ms-keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: white;
-  }
-}
-
-@-o-keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: white;
-  }
-}
-
-.green {
-  color: green !important;
-}
-
-.other-services:after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.sv {
-  float: left;
-  width: 40px;
-  padding: 5px;
-  height:40px;
-}
-
-.sv img {
-  height:40px;
-}
-
-.vertical-space {
-  height:20px;
-}
-
-.l-space {
-  margin:0;
-  padding:0;
-  width: calc(50vw - 100px) !important;
-  height:50px !important;
-}
-body {
-  margin:0;
-  font:normal 75% Arial, Helvetica, sans-serif;
-}
-canvas{
-  display: block;
-  vertical-align: bottom;
-}
-#particles-js{
-  z-index:-1;
-  position:absolute;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-
-@keyframes updated {
-  0% {
-    color: white;
-  }
-  10% {
-    color: greenyellow;
-  }
-}
-
-.updated {
-  animation: ;
-}
-
-.ges {
-  margin-right: calc(50% - 51.010px);
-}
-
-.gfs {
-  margin-right: calc(50% - 46.98px) !important;
-}
-
-.ohg {
-  z-index:1;
-  transition: all 0.5s ease;
-}
-
-.ohg:hover {
-  color:blue !important;
-}
-
-.copyright {
-  width:100%;
-  text-align:center;
-  position:fixed;
-  bottom:0;
-    color: #586069;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-    /* margin-bottom: 2px; */
-    font-size: 10px;
-}
-
-.link {
-  color: #586069 !important;
-  text-decoration: none;
-}
-
-#headerC {
-  background-color:black;
-}
-
-.signin:hover {
-  color: blue;
-}
-
-.background-sb {
-  background-color: #121212;
-}
-
-.white {
-  color:white;
-}
-
-.avatar2 {
-  margin-right:28px !important;
-}
-
-.asr {
-  position: absolute;
-  right: 6px;
-  top:13px;
-  height:46px;
-  width:46px;
-}
 
 /* div {
-  height:inherit;
+  border: black solid 1px
 } */
+
+@media screen and (min-width: 767px) {
+  .grid {
+    display: grid;
+    grid-template-columns: auto 0.5fr 2fr fit-content(20%);
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas: 
+    "title awards-years sidebar"
+    "header header sidebar"
+    "content content sidebar"
+    "footer footer footer";
+  }
+
+}
+.team-logo {
+  margin-top: 10%;
+}
+.team-picture, .gradient-wrap {
+  height: 160px; 
+  width: 160px;
+
+    /* width: auto; */
+  border-radius: 50%;
+  border: 0.2px white solid;
+}
+.teamName {
+  overflow: hidden;
+}
+.logo-icon {
+  scale: 1;
+  height:80px;
+  width:auto;
+  margin:40px;
+  border-radius: 12%;
+  -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+
+}
+
+.teamName {
+  color:black;
+  font-family: 'Tomorrow', sans-serif;
+  width:auto;
+  /* margin-left:40px; */
+  margin-bottom:0px;
+  text-align: left;
+  /* margin-left:20px;
+  margin-top:20px;
+  font-size: 30px; */
+  width:auto;
+  /* width:200px; */
+}
+
+.location {
+  /* margin-left:20px; */
+  margin-top:5px;
+  text-align: left;
+  color:grey;
+  border-bottom: solid darkgray 1px;
+
+}
