--- a/team.css
+++ b/team.css
@@ -100,6 +100,51 @@ body {
   color:grey;
 }
 
+.teamnumber {
+  margin-top: 30px;
+  padding-left: 30px;
+  width:90%;
+  color:green;
+  font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  width:60%;
+}
+
+.team_name {
+  margin-left: 30px;
+  /* height:100px; */
+  margin-top:-5px;
+  color:white;
+  font-family: 'Tomorrow', sans-serif;
+  /* width:100%; */
+  display:flex;
+  text-align: left;
+  font-size: 120px;
+  width:60%;
+}
+.info {
+  margin-left:30px;
+  align-self: flex-end;
+  padding-right: 30px;
+  font-size: 20px;
+  text-align: left;
+  color:white;
+  font-family: 'Montserrat', sans-serif;
+  display:flex;
+  width:60%;
+}
+
+.infoicon {
+  color:white;
+  width:10%;
+  font-size:30px;
+  margin-top:30px;
+}
+
+.toprow {
+  display: flex;
+
+}
 /* div {
   border: 1px solid white;
 } */
@@ -107,3 +152,15 @@ img {
   height: 30px;
   width: auto;
 }
+
+.nomargin {
+  margin: 0px;
+}
+
+.nomargin2 {
+  align-self: flex-end;
+  margin:0px;
+}
+
+
+/* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #232741; background-repeat: no-repeat; background-size: 20%; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
